--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,30 @@ p { font-size: 2rem; text-align: center;}
 .navbar a { float: left; display: block; color: #f2f2f2; font-size: 1rem; text-align: center; padding: 1rem 1.5rem; text-decoration: none; }
 .navbar a:hover { color: #000000; }
 .navbar .active { color: #000000; }
+.navbar .menu { display: none; }
+
+@media screen and (max-width: 600px) {
+    .navbar a:not(:first-child) { display: none;}
+    .navbar a.menu {
+        float: right;
+        display: block;
+    }
+}
+
+@media screen and (max-width:600px) {
+    .navbar .responsive { position: relative; }
+    .navbar .responsive .menu {
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+    .navbar .responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+}
+
 .header { display: flex; top: 0; width: 100%; height: 3rem; background-color: var(--dark-gray); position: fixed; justify-content: center; z-index: 2;}
 .fsl-logo { display: flex; height: 2.5rem; width: auto; align-items: center;} 
 /*-------------------------------------------------------------- */
@@ -27,7 +51,7 @@ p { font-size: 2rem; text-align: center;}
 .row-50-img, 
 .row-50-txt { display: flex; width: 50%; }
 .row-50-txt { flex-direction: column; justify-content: center; padding:1.5rem; }
-.row-50-img { padding: 2rem; justify-content: center; }
+.row-50-img { padding: 2rem; justify-content: center; align-items: center;}
 /*.img-wrap { background-color: white; border-radius: .5rem; border: 2px solid #757575; padding: 20px; flex: 1; display: flex; justify-content: center; }*/
 .img-wrap { border-radius: .5rem; padding: 20px; flex: 1; display: flex; justify-content: center; }
 .about .row-50-img .img-wrap .pict { width: 75%; height: auto; box-shadow: 0 0 40px rgba(0, 0, 0, 0.6); border-radius: .5rem;}
@@ -73,7 +97,7 @@ main {max-width: 80%;margin: 20px auto;padding: 0 20px;}
 .club-logo { display: flex; flex-direction: row; align-items: center; margin: 50px 0px 0px 10px;}
 .club-name { display: flex; flex-direction: row; align-items: center; color: #fff; }
 
-.player-info-container { display: flex; flex-direction: row; align-items: flex-start; justify-content: space-evenly; height: 460px; background-color: #06397a; border-top: 120px solid var(--light-blue); border-bottom: 60px solid var(--light-blue); }
+.player-info-container { display: flex; flex-direction: row; align-items: flex-start; justify-content: space-evenly; height: 460px; background-color: #0c294e; border-top: 120px solid var(--light-blue); border-bottom: 60px solid var(--light-blue); }
 .player-logo { display: flex; flex-direction: row; margin: 0px 0px 0px 10px;}
 .player-logo img { display: flex; width: 200px; height: auto; align-items: flex-end;}
 .about-player { height: 500px; text-align: center; }
